syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "io/aggregator/entity/transaction_merchant_key.proto";

package io.aggregator.entity;

option java_outer_classname = "HourEntity";

message HourCreated {
  MerchantKey merchant_key = 1;
  int64 epoch_hour = 2;
}

message MinuteAdded {
  MerchantKey merchant_key = 1;
  int64 epoch_minute = 2;
}

message HourAggregated {
  MerchantKey merchant_key = 1;
  int64 epoch_hour = 2;
  double transaction_total_amount = 3;
  int32 transaction_count = 4;
  google.protobuf.Timestamp last_update_timestamp = 5;
  google.protobuf.Timestamp aggregate_request_timestamp = 6;
  string payment_id = 7;
}

message ActiveMinuteAggregated {
  MerchantKey merchant_key = 1;
  int64 epoch_minute = 2;
  double transaction_total_amount = 3;
  int32 transaction_count = 4;
  google.protobuf.Timestamp last_update_timestamp = 5;
  google.protobuf.Timestamp aggregate_request_timestamp = 6;
  string payment_id = 7;
}

message HourAggregationRequested {
  MerchantKey merchant_key = 1;
  int64 epoch_hour = 2;
  repeated int64 epoch_minutes = 3;
  google.protobuf.Timestamp aggregate_request_timestamp = 4;
  string payment_id = 5;
}

message HourState {
  MerchantKey merchant_key = 1;
  int64 epoch_hour = 2;
  int64 epoch_day = 3;
  repeated ActiveMinute activeMinutes = 4;
  repeated AggregateHour aggregateHours = 5;
  google.protobuf.Timestamp last_update_timestamp = 6;
}

message AggregateHour {
  repeated ActiveMinute activeMinutes = 1;
  google.protobuf.Timestamp aggregate_request_timestamp = 2;
  string payment_id = 3;
}

message ActiveMinute {
  int64 epoch_minute = 1;
  double transaction_total_amount = 2;
  int32 transaction_count = 3;
  google.protobuf.Timestamp last_update_timestamp = 4;
  google.protobuf.Timestamp aggregate_request_timestamp = 5;
  string paymenet_id = 6;
}
